--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,7 +145,7 @@ jobs:
       - name: Run selenium
         run: java -jar $SELENIUM_JAR_PATH standalone &
       - name: Run php fixtures server
-        run: php -S localhost:8080 -t tests/fixtures/www &> ./fixtures.log &
+        run: php -S localhost:8080 -t tests/fixtures/www
       - name: Get composer cache directory
         id: composercache
         run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
