--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,9 @@ jobs:
           coverage: pcov
           ini-values: memory_limit=-1
       - name: Run selenium
-        run: java -jar $SELENIUM_JAR_PATH standalone --host 10.1.0.32 &
+        run: |
+          echo $SELENIUM_JAR_PATH
+          java -jar $SELENIUM_JAR_PATH standalone --host 10.1.0.32 &
       - name: Run php fixtures server
         run: php -S localhost:8080 -t tests/fixtures/www &> ./fixtures.log &
       - name: Get composer cache directory
